stopped footer overlap with content div

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
 
 .content {
     overflow: auto;
-    height: 40rem;
+    height: 38rem;
     width: 45rem;
     padding-right: 0.5rem;
     margin-top: 3rem;
